// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerField Component DatePickerField renders 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input"
            name="name"
            placeholder="MMM DD, YYYY"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container input-date-picker-wrapper-read-only"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input-read-only input-date-picker-input highlighted"
            disabled=""
            name="name"
            placeholder="MMM DD, YYYY"
            tabindex="-1"
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container input-date-picker-wrapper-read-only"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input-read-only"
            name="name"
            placeholder="MMM DD, YYYY"
            readonly=""
            tabindex="-1"
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <div
      class="container"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input input-error"
            name="name"
            placeholder="MMM DD, YYYY"
            tabindex="0"
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;
